--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,12 +18,7 @@ jobs:
 
     - name: Get dependencies
       run: |
-        go mod download |
-        go install golang.org/x/lint/golint
-        
-    - name: Go lint
-      run: |
-        golint ./...
+        go mod download
 
     - name: Build
       run: go build -v .
