--- a/.github/workflows/golint.yml
+++ b/.github/workflows/golint.yml
@@ -7,15 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
-
     - name: Go-Linty
       uses: ArangoGutierrez/GoLinty-Action@go-1.13rc1-alpine
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_LINTY }}
 
