Update linty conf file

--- a/.linty/linty.conf
+++ b/.linty/linty.conf
@@ -1,23 +1,7 @@
-name: Lint
-on:
-  pull_request:
-    branches:
-    - master
-    - develop
-  push:
-    branches:
-    - master
-    - develop
-jobs:
-
-  Lint:
-    name: GoLinty
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-    - name: Go-Linty
-      uses: ArangoGutierrez/GoLinty-Action@go-1.13rc1-alpine
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_LINTY }}
+github.com/sajeevany/portfolioService/cmd
+github.com/sajeevany/portfolioService/internal/config
+github.com/sajeevany/portfolioService/internal/endpoints
+github.com/sajeevany/portfolioService/internal/health
+github.com/sajeevany/portfolioService/internal/logging
+github.com/sajeevany/portfolioService/internal/logging/middleware
+github.com/sajeevany/portfolioService/internal/users
