--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 name: Go
 on: [push]
 jobs:
-
+  
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -19,6 +19,13 @@ jobs:
     - name: Get dependencies
       run: |
         go mod download
-
+        
+    - name: Run lint
+      uses: samuelmeuli/lint-action@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN_LINTY }}
+        golint: true
+        gofmt: true
+        
     - name: Build
       run: go build -v ./...
