--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,14 @@ jobs:
         uses: actions/checkout@v2
 
       # Install your linters here
+      - name: Set up Go 1.13
+          uses: actions/setup-go@v1
+          with:
+            go-version: 1.13
+          id: go
+
+      - name: Get dependencies
+        run: go install golang.org/x/lint/golint
 
       - name: Run linters
         uses: samuelmeuli/lint-action@v1
