--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,11 +18,5 @@ jobs:
           go-version: 1.13
         id: go
 
-      - name: Get dependencies
-        run: go install golang.org/x/lint/golint
-
-      - name: Run linters
-        uses: samuelmeuli/lint-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN_LINTY }}
-          golint: true
+      - name: GolangCI-Linter
+        uses: Mushus/golangci-linter@v1.1.2
