--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.1'
 services:
   portfolio-service:
-    image: sajeevany/portfolio-service:latest
+    build:
+      context: ./..
+      dockerfile: build/Dockerfile
     ports:
       - "80:8080"
   cache:
