Add integration test setup

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   portfolio-service:
     command: /bin/sh -c "export GIT_COMMIT=$$(git rev-parse HEAD)"
     build:
-      context: ./..
-      dockerfile: build/Dockerfile
+      context: ..
+      dockerfile: ../build/Dockerfile
       args:
         CONFIG_FILE: "deploy/portfolio-service-conf_compose.json"
         GIT_COMMIT: $GIT_COMMIT
